@@ -49,6 +49,7 @@ SubVersion: $Id$
 	- [roms]  $2718: fixed bug: one-shot breakpoint was never raised
 	- [roms]  $2719: fixed bug: gtk warning when opening popup menu while being in debugger
 	- [kevin] $2721: don't show Insight's GDB console by default
+	- [roms]  $2722: decreased vertical space between cells to make window more compact
 
 	
 - 07/09/2007, version 3.01b:
